[package]
name = "regview"
version = "0.2.2"
edition = "2018"
description = "Offline-viewer for registry files"
homepage = "https://www.github.com/janstarke/regview"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "2"
simplelog = "0.11"
log = "0.4"
cursive = "0.16"
cursive_table_view = "0.13"
memmap = "0.7"
cursive-flexi-logger-view = "^0"

nt_hive2 = "1.0"
# nt_hive2 = {version="1", path="../nt-hive2" }
regex = "1.5"
thiserror = "1.0"
binread = "2.2"
chrono = "0.4"