[package]
name = "regview"
version = "0.5.2"
edition = "2018"
description = "Offline-viewer for registry files"
repository = "https://github.com/janstarke/regview"
authors = ["Jan Starke <jan.starke@t-systems.com>"]
license = "GPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
license-file = "LICENSE"
depends = "libncurses6 (>=6.2)"

[dependencies]
anyhow = "1"
clap = {version="4", features=["derive"]}
clap-verbosity-flag = "2.0.0"
flexi_logger = "=0.22" # needs to fixed to the same version as of cursive-flexi-logger-view 
cursive-flexi-logger-view = "0.6"
log = "0.4"
cursive = "0.21"
cursive_table_view = "0.15"
memmap = "0.7"

nt_hive2 = "4.2"
# nt_hive2 = {version="1", path="../nt-hive2" }
regex = "1.5"
thiserror = "1.0"
binread = "2.2"
chrono = "0.4"

encoding_rs = "0.8"
uuid = "1"
escape_string = "0.1.2"
